contacts component start, mapycz component start

--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -7,36 +7,39 @@
     <div class="h-100 content">
 
         <div class="contact-info">
-            <p>Email: <a href="mailto:info@sigmavocalplace.com">{{"info@sigmavocalplace.com"}}</a></p>
+            <h3>КОНТАКТЫ</h3>
+
+            <h4>Адрес:</h4>
+            <p>123 Vocal Lane, Music City</p>
+
+            <h4>Телефон:</h4>
             <p>Phone: (123) 456-7890</p>
-            <p>Address: 123 Vocal Lane, Music City</p>
+
+            <h4>Социальные сети:</h4>
+
+            <h4>e-mail:</h4>
+            <p>Email: <a href="mailto:info@sigmavocalplace.com">{{"info@sigmavocalplace.com"}}</a></p>
         </div>
 
-        <mat-card>
-            <mat-card-header>
-                <mat-card-title>КОНТАКТЫ</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-                <form>
-                    <mat-form-field class="full-width">
-                        <mat-label>Name</mat-label>
-                        <input matInput placeholder="Your name">
-                    </mat-form-field>
-                    <mat-form-field class="full-width">
-                        <mat-label>Email</mat-label>
-                        <input matInput placeholder="Your email">
-                    </mat-form-field>
-                    <mat-form-field class="full-width">
-                        <mat-label>Message</mat-label>
-                        <textarea matInput placeholder="Your message"></textarea>
-                    </mat-form-field>
-                    <button mat-raised-button color="primary">Send</button>
-                </form>
-            </mat-card-content>
-        </mat-card>
+        <!-- div maps -->
+        <app-mapycz></app-mapycz>
 
     </div>
 
-    <!-- div mapbox -->
-
 </div>
+
+<!-- <form>
+    <mat-form-field class="full-width">
+        <mat-label>Name</mat-label>
+        <input matInput placeholder="Your name">
+    </mat-form-field>
+    <mat-form-field class="full-width">
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="Your email">
+    </mat-form-field>
+    <mat-form-field class="full-width">
+        <mat-label>Message</mat-label>
+        <textarea matInput placeholder="Your message"></textarea>
+    </mat-form-field>
+    <button mat-raised-button color="primary">Send</button>
+</form> -->
