--- a/src/app/components/contacts/contacts.component.scss
+++ b/src/app/components/contacts/contacts.component.scss
@@ -1,5 +1,21 @@
 .content {
     display: grid;
+    grid-template-columns: 4fr 6fr;
     grid-template-rows: 1fr;
-    grid-template-columns: 6fr 4fr;
+    gap: 5%;
+    padding: 0 5%;
+}
+
+.contact-info {
+    margin-top: 40px;
+    margin-bottom: 20px;
+
+    h3 {
+        font-size: 28px;
+        font-weight: 600;
+    }
+
+    h4 {
+        font-size: 18px;
+    }
 }
