--- a/src/app/components/classes/classes.component.html
+++ b/src/app/components/classes/classes.component.html
@@ -12,7 +12,7 @@
                     <mat-card class="h-100 card">
                         <mat-card-header class="flex-row center-row card__header">
                             <mat-card-title>Вокал для всех</mat-card-title>
-                            <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_mike_back.jpg?ver=0"
+                            <img src="https://res.cloudinary.com/dxunxtt1u/image/upload/icon_mike-852_hdnnjm.png"
                                 alt="icon__mike" class="card__icon">
                         </mat-card-header>
                         <mat-card-content class="card__content">
@@ -28,7 +28,7 @@
                     <mat-card class="h-100 card">
                         <mat-card-header class="flex-row center-row card__header">
                             <mat-card-title>Индивидуальный <br> план обучения</mat-card-title>
-                            <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_note_back.jpg?ver=0"
+                            <img src="https://res.cloudinary.com/dxunxtt1u/image/upload/icon_note-649_jbru3t.png"
                                 alt="icon__note" class="card__icon">
                         </mat-card-header>
                         <mat-card-content class="card__content">
@@ -44,7 +44,7 @@
                     <mat-card class="h-100 card">
                         <mat-card-header class="flex-row center-row card__header">
                             <mat-card-title>Осуществите <br> свою мечту</mat-card-title>
-                            <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_star_back.jpg?ver=0"
+                            <img src="https://res.cloudinary.com/dxunxtt1u/image/upload/icon_star_obdm8j.png"
                                 alt="icon__star" class="card__icon">
                         </mat-card-header>
                         <mat-card-content class="card__content">
@@ -60,7 +60,7 @@
                     <mat-card class="h-100 card">
                         <mat-card-header class="flex-row center-row card__header">
                             <mat-card-title>Раскройте себя</mat-card-title>
-                            <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_sing_back.jpg?ver=0"
+                            <img src="https://res.cloudinary.com/dxunxtt1u/image/upload/icon_sing-868_qathwc.png"
                                 alt="icon__sing" class="card__icon">
                         </mat-card-header>
                         <mat-card-content class="card__content">
@@ -76,13 +76,13 @@
             </div>
         </div>
 
-        <div class="flex-col center-col right-col">
+        <div class="flex-col right-col">
             <div class="flex-col h-100 wrapper">
                 <div class="flex-col center-row price">
                     <span class="price__first">
                         Первое пробное занятие бесплатно!
                     </span>
-                    <button mat-button mat-raised-button>ЗАПИСАТЬСЯ</button>
+                    <button mat-button mat-raised-button>записаться</button>
                     <span class="price__list">
                         Прайс-лист:
                     </span>
@@ -104,7 +104,7 @@
 
                 <div class="flex-col info">
                     <span>Узнать больше:</span>
-                    <div class="flex-row center-row">
+                    <div class="flex-row center-row btns">
                         <button mat-button mat-raised-button>о преподавателе</button>
                         <button mat-button mat-raised-button>о студии</button>
                     </div>
