--- a/src/app/components/contacts/contacts.component.scss
+++ b/src/app/components/contacts/contacts.component.scss
@@ -3,19 +3,47 @@
     grid-template-columns: 4fr 6fr;
     grid-template-rows: 1fr;
     gap: 5%;
-    padding: 0 5%;
+    padding: 0 15%;
 }
 
-.contact-info {
-    margin-top: 40px;
-    margin-bottom: 20px;
+.wrapper {
+    padding: 80px 0;
 
     h3 {
+        margin: 0;
         font-size: 28px;
         font-weight: 600;
     }
 
     h4 {
+        margin: 0;
         font-size: 18px;
+        margin-bottom: 6px;
+
+        &:not(:first-child) {
+            margin-top: 12px;
+        }
     }
 }
+
+.social {
+    span {
+        font-size: 28px;
+    }
+}
+
+app-mapycz {
+    border: 1px solid blue;
+    border-radius: 20px;
+}
+
+// app-social-media {
+//     ::ng-deep .social {
+//         justify-content: flex-start;
+//     }
+// }
+
+// .footer {
+//     position: absolute;
+//     bottom: 0;
+// }
