--- a/src/app/components/mapycz/mapycz.component.scss
+++ b/src/app/components/mapycz/mapycz.component.scss
@@ -1,5 +1,11 @@
 .map-container {
-    width: 600px;
-    height: 400px;
-    border: 1px solid blue;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.logocontrol {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
 }
