--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -10,17 +10,17 @@
     // --select-color: #976158;
     // --dark-select-color: #723E36;
 
-    --light-select-color: #B9857D;
-    --select-color: #D16FAF;
-    --dark-select-color: #723E36;
+    // --light-select-color: #E3BAB3;
+    // --select-color: #B9857D;
+    // --dark-select-color: #60261D;
 
     // --light-alt-color: #71547B;
     // --alt-color: #5A3C64;
-    --dark-alt-color: #42254B;
+    // --dark-alt-color: #42254B;
 
-    --light-alt-color: #E2CAF0;
-    --alt-color: #9E68BC;
-    // --dark-alt-color: #692B8B;
+    --light-alt-color: #bfad51;
+    --alt-color: #BF7651;
+    --dark-alt-color: #65443C;
 
     --light-color: #f0f0f0;
     --gray-color: #7d7d7d;
