--- a/src/app/components/social-media/social-media.component.scss
+++ b/src/app/components/social-media/social-media.component.scss
@@ -1,5 +1,5 @@
 .social {
-   color: var(--light-color);
+    color: var(--light-color);
     justify-content: center;
     gap: 20px;
 
@@ -10,9 +10,10 @@
         width: 48px;
         height: 48px;
         border-radius: 0;
+        transition: transform 0.3s;
 
         &:hover {
-
+            transform: scale(1.1);
         }
     }
 }
