--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,22 +1,9 @@
 * {
-    --bright-brand-color: #efffd8;
-    // --bright-brand-color: #BFD1A5;
+    --bright-brand-color: #EFFFD8;
     --light-brand-color: #94AA73;
     --brand-color: #738B51;
     --shaded-brand-color: #526931;
     --dark-brand-color: #3F581B;
-
-    // --light-select-color: #B9857D;
-    // --select-color: #976158;
-    // --dark-select-color: #723E36;
-
-    // --light-select-color: #E3BAB3;
-    // --select-color: #B9857D;
-    // --dark-select-color: #60261D;
-
-    // --light-alt-color: #71547B;
-    // --alt-color: #5A3C64;
-    // --dark-alt-color: #42254B;
 
     --light-alt-color: #bfad51;
     --alt-color: #BF7651;
