--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -19,7 +19,7 @@
   color: var(--light-color);
 
   &.selected {
-    flex: 0 0 400px;
+    flex: 0 0 300px;
     flex-grow: 2;
   }
 
@@ -65,20 +65,28 @@
     transform: translate(-50%, -50%);
     width: 100px;
     height: 100px;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.4);
     border-radius: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background 0.3s ease;
 
     mat-icon {
       color: var(--light-color);
-      opacity: 0.3;
+      opacity: 0.8;
       transition: transform 0.3s, opacity 0.3s;
+      font-size: 40px;
+      height: 40px;
+      width: 40px;
+    }
 
-      &:hover {
-        transform: scale(1.05);
-        opacity: 0.5;
+    &:hover {
+      background: rgba(0, 0, 0, 0.5);
+
+      mat-icon {
+        transform: scale(1.2);
+        opacity: 1;
       }
     }
   }
