--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -74,7 +74,6 @@ mat-toolbar {
 app-social-media {
     width: 200px;
     background: var(--brand-color) !important;
-    color: var(--light-color);
 
     ::ng-deep .social {
         gap: 10px;
@@ -82,6 +81,10 @@ app-social-media {
         &__item {
             width: 40px !important;
             height: 40px !important;
+
+            &:hover {
+                transform: scale(1.1);
+            }
         }
     }
 }
