--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,4 +47,64 @@ h2 {
     justify-content: center;
 }
 
+.ol-viewport {
+    border-radius: 20px;
+}
+
+.ol-overlaycontainer-stopevent {
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.ol-zoom {
+    pointer-events: auto;
+    border-radius: 10px;
+    height: fit-content;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row-reverse;
+    margin: 10px;
+}
+
+.ol-zoom-in {
+    background: var(--light-color);
+    width: 40px;
+    height: 30px;
+    border: none;
+    border-left: 1px solid grey;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    font-size: 26px;
+}
+
+.ol-zoom-out {
+    background: var(--light-color);
+    width: 40px;
+    height: 30px;
+    border: none;
+    border-right: 1px solid var(--gray-color);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.ol-rotate {
+    display: none;
+}
+
+.ol-attribution {
+    display: none;
+}
+
+.logocontrol {
+    margin: 2px;
+}
+
 // "@angular/material/prebuilt-themes/magenta-violet.css",
