MapyCZ custom pinpoint & tooltip; styles

--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -20,7 +20,7 @@
                 <span><a href="mailto:info@sigmavocalplace.com">{{"info@sigmavocalplace.com"}}</a></span>
             </div>
 
-            <div class="flex-col social">
+            <div class="flex-col">
                 <h4><span class="sigma-font">ΣΙΓΜΑ</span> в социальных сетях:</h4>
                 <app-social-media></app-social-media>
             </div>
