--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,8 @@ body {
 
 .sigma-font {
     font-family: 'Blacker Sans Display Trial', sans-serif;
-    font-weight: bold;
+    font-weight: 600;
+    font-size: 28px;
 }
 
 .section {
