--- a/src/app/components/contacts/contacts.component.scss
+++ b/src/app/components/contacts/contacts.component.scss
@@ -26,13 +26,7 @@
     }
 }
 
-.social {
-    span {
-        font-size: 28px;
-    }
-}
-
 app-mapycz {
-    border: 1px solid blue;
+    // border: 1px solid blue;
     border-radius: 20px;
 }
