--- a/src/app/components/mapycz/mapycz.component.html
+++ b/src/app/components/mapycz/mapycz.component.html
@@ -1,2 +1,11 @@
-<p>mapycz works!</p>
-<!-- <div #mapContainer class="map-container"></div> -->
+<!-- <p>mapycz works!</p> -->
+<div #mapContainer class="map-container"></div>
+<div #tooltip class="tooltip">
+    <div class="flex-row tooltip__wrapper">
+        <div class="flex-col tooltip__content">
+            <p>Вокальная студия <span class="sigma-font">ΣΙΓΜΑ</span></p>
+            <span>123 Vocal Lane, Music City123 Vocal Lane, Music City123 Vocal Lane, Music City</span>
+        </div>
+        <button class="flex-col tooltip__close" (click)="hideTooltip()"><mat-icon>close</mat-icon></button>
+    </div>
+</div>
