--- a/src/app/components/mapycz/mapycz.component.scss
+++ b/src/app/components/mapycz/mapycz.component.scss
@@ -9,3 +9,47 @@
     bottom: 10px;
     right: 10px;
 }
+
+.tooltip {
+    display: none;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.7);
+    color: var(--light-color);
+    padding: 5px 5px 10px 10px;
+    border-radius: 3px;
+    font-size: 12px;
+    white-space: nowrap;
+    z-index: 10;
+    pointer-events: auto;
+
+    &__content {
+
+        min-width: 150px;
+        max-width: 200px;
+    }
+
+    p {
+        margin: 0;
+        margin-bottom: 8px;
+        font-size: 16px;
+
+        .sigma-font {
+            font-size: 22px;
+        }
+    }
+
+    span {
+        font-size: 12px;
+        white-space: normal;
+    }
+
+    button {
+        margin-left: 10px;
+        cursor: pointer;
+        font-weight: bold;
+        padding: 0;
+        background: transparent;
+        border: none;
+        color: var(--light-color);
+    }
+}
