Refactored Classes component; Mobile version for Header & Classes; other small style adjustments for the mobile version

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -33,6 +33,15 @@
         </mat-card>
     </div>
 
-    <!-- use the embla gallery component for the mobile version -->
+    <!-- TO DO -->
+
+    <!-- Use the embla gallery component to display cards in the mobile version. -->
+    <!-- Create "Learn More" logic and comment it. -->
+
+    <!-- After approval: -->
+    <!-- 1. Add buttons "Learn More" to each card.  -->
+    <!-- 2. Create sections "teacher" and "studio". Classes section already exists. -->
+    <!-- 3. Order: Classes - Teacher - Studio -->
+    <!-- 4. Animate "Learn More" buttons to ScrollTo specific sections. -->
 
 </div>
