--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,18 @@
 <div class="flex-col center-row section">
 
-    <!-- add logo moving to the header when srolling down -->
+    <!-- <img class="home-img" src="https://res.cloudinary.com/dxunxtt1u/image/upload/cat_S_sing2_transparent_gscgub.png" alt=""> -->
+
     <div class="home-content flex-col">
         <h1>Добро пожаловать в <span class="sigma-font">ΣΙΓΜΑ</span>, вокальное место</h1>
         <p>Раскройте свой вокальный потенциал с помощью индивидуальных занятий по вокалу с опытным профессионалом.</p>
         <p>Пeрвоe занятие бeсплатнo!</p>
     </div>
-    
-    <img class="w-h-100 home-img" src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/cat_S_sing2_png.jpg?ver=1" alt="Tutor in action">
+
+    <img class="w-h-100 cover-img"
+        src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/cat_S_sing2_png.jpg?ver=1"
+        alt="Tutor in action">
 
 </div>
+
+<!-- TO DO -->
+<!-- add logo moving to the header when srolling down -->
