--- a/src/app/components/contacts/contacts.component.scss
+++ b/src/app/components/contacts/contacts.component.scss
@@ -30,3 +30,14 @@ app-mapycz {
     // border: 1px solid blue;
     border-radius: 20px;
 }
+
+@media (max-width: 768px) {
+    .section {
+        height: unset;
+    }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+    }
+}
