style fixes in Header & Classes & Contacts

--- a/src/app/components/classes/classes.component.html
+++ b/src/app/components/classes/classes.component.html
@@ -8,7 +8,7 @@
         <div class="flex-col center-col left-col">
             <div class="flex-col center-row h-100 left-col__wrapper">
                 <h3 class="cards__title">Почему <span class="sigma-font">ΣΙΓΜΑ</span> ?</h3>
-                <div class="flex-row center-row w-h-100">
+                <div class="flex-col center-col w-h-100">
                     <div class="center-row cards">
                         <mat-card *ngFor="let card of cards" class="flex-col w-h-100 card">
                             <mat-card-header class="flex-row center-row card__header">
