--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -9,6 +9,8 @@
         <div class="flex-col wrapper">
             <h3>КОНТАКТЫ</h3>
 
+            <app-mapycz class="w-h-100 mapy-mobile"></app-mapycz>
+
             <div class="flex-col">
                 <h4>Адрес:</h4>
                 <span>123 Vocal Lane, Music City</span>
@@ -20,14 +22,14 @@
                 <span><a href="mailto:info@sigmavocalplace.com">{{"info@sigmavocalplace.com"}}</a></span>
             </div>
 
-            <div class="flex-col">
+            <div class="flex-col social-media">
                 <h4><span class="sigma-font">ΣΙΓΜΑ</span> в социальных сетях:</h4>
                 <app-social-media></app-social-media>
             </div>
 
         </div>
 
-        <div class="flex-col wrapper">
+        <div class="flex-col wrapper mapy-desktop">
             <app-mapycz class="w-h-100"></app-mapycz>
         </div>
 
