--- a/src/app/components/contacts/contacts.component.scss
+++ b/src/app/components/contacts/contacts.component.scss
@@ -16,14 +16,17 @@
     }
 
     h4 {
-        margin: 0;
+        margin: 12px 0 6px 0;
         font-size: 18px;
-        margin-bottom: 6px;
 
         &:not(:first-child) {
             margin-top: 12px;
         }
     }
+}
+
+.mapy-mobile {
+    display: none;
 }
 
 app-mapycz {
@@ -39,5 +42,35 @@ app-mapycz {
     .content {
         display: flex;
         flex-direction: column;
+        gap: 20px;
+        padding: 0 10%;
+    }
+
+    .wrapper {
+        padding: 0;
+    }
+
+    .mapy-mobile {
+        display: flex;
+        aspect-ratio: 3 / 2;
+        margin: 20px 0;
+    }
+
+    .mapy-desktop {
+        display: none;
+    }
+
+    .social-media {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        margin: 20px 0;
+        margin-bottom: 40px;
+
+        h4 {
+            margin: 0;
+        }
     }
 }
