refactored: Gallery Component (replaced Embla with Swiper.js); created: mobileService (checks if mobile <768px); mobile version: About Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="main-wrapper">
-    <app-header class="w-100"></app-header>
+    <!-- <app-header class="w-100"></app-header> -->
     <!-- <router-outlet></router-outlet> -->
 
     <app-home id="home-section"></app-home>
-    <!-- <app-about id="about-section"></app-about> -->
+    <app-about id="about-section"></app-about>
     <app-classes id="classes-section"></app-classes>
     <app-contacts id="contacts-section"></app-contacts>
 </div>
