--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -92,9 +92,19 @@
   }
 }
 
+app-gallery {
+  display: none;
+}
+
 @media (max-width: 768px) {
   .section {
-      // height: unset;
-      padding: 4px 0;
+    // height: unset;
+    padding: 4px 0;
+  }
+
+  app-gallery {
+    display: block;
+    height: 100vh;
+    // padding: 10px 0;
   }
 }
