--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,10 +1,23 @@
-<div #embla class="embla">
-    <div class="embla__viewport">
-        <div class="embla__container">
-            <!-- Add your slides here -->
-            <div class="embla__slide">Slide 1</div>
-            <div class="embla__slide">Slide 2</div>
-            <div class="embla__slide">Slide 3</div>
-        </div>
+<div class="flex-col swiper-container">
+    <div class="swiper-wrapper">
+
+        <mat-card class="h-100 swiper-slide card" *ngFor="let slide of slides">
+            <img [src]="slide.image" alt="icon" class="w-h-100 card__background">
+            <mat-card-header class="flex-row center-col card__header">
+                <mat-card-title>{{ slide.title }}</mat-card-title>
+            </mat-card-header>
+            <mat-card-content class="card__content">
+                <span>{{ slide.contentLong }}</span>
+            </mat-card-content>
+        </mat-card>
+
+    </div>
+
+    <div class="swiper-controls">
+        <!-- Pagination bullets -->
+        <div class="swiper-pagination"></div>
+        <!-- Navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
     </div>
 </div>
