working on the Header component's mobile version; restricted opening menu on swiping left in the Gallery and MapyCZ

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="main-wrapper">
-    <!-- <app-header class="w-100"></app-header> -->
+    <app-header class="w-100"></app-header>
     <!-- <router-outlet></router-outlet> -->
 
     <app-home id="home-section"></app-home>
