--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,6 +4,10 @@
         <h2>About my studio</h2>
     </div>
 
+    <!-- TO DO -->
+    <!-- In desktop. On card select, first card width expansion, then text expansion. -->
+    <!-- Add animation "text typing" -->
+     
     <!-- For Desktop Version -->
     <div class="wrapper h-100 flex-row center-row" *ngIf="!isMobile">
 
