--- a/src/app/components/mapycz/mapycz.component.html
+++ b/src/app/components/mapycz/mapycz.component.html
@@ -1,7 +1,7 @@
 <!-- <p>mapycz works!</p> -->
 
 <!-- Mapy CZ widget -->
-<!-- <div #mapContainer class="map-container"></div> -->
+<div #mapContainer class="map-container"></div>
 
 <!-- Tooltip with address -->
 <div #tooltip class="tooltip">
