--- a/src/styles.scss
+++ b/src/styles.scss
@@ -111,7 +111,8 @@ h2 {
 @media (max-width: 768px) {
 
     app-header {
-        height: 100%;
+        // height: 100%;
+        height: auto;
     }
 
     .section {
