--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="flex-row center-row header">
 
     <!-- Menu icon for mobile view -->
-    <div class="flex-row h-100 menu-icon">
+    <div class="flex-row h-100 menu-icon" [class.shake]="isMenuOpen">
         <button mat-icon-button (click)="toggleMenu()">
             <mat-icon>menu</mat-icon>
         </button>
@@ -43,6 +43,7 @@
     <!-- Links to the social media -->
     <app-social-media class="h-100"></app-social-media>
 
+    <!-- Piano keys -->
     <div class="piano-keys" style="display: none;">
         <div class="white-key"></div>
         <div class="white-key">
@@ -66,20 +67,23 @@
 </mat-toolbar>
 
 <!-- Dropdown menu for mobile view -->
-<div *ngIf="isMenuOpen" class="h-100 menu-dropdown">
-    <button mat-button class="special">Записаться</button>
-
-    <button mat-button data-section="home-section" (click)="scrollToSection('home-section')">
-        Главная
-    </button>
-    <button mat-button data-section="about-section" (click)="scrollToSection('about-section')">
-        О ΣΙΓΜΑ
-    </button>
-    <button mat-button data-section="classes-section" (click)="scrollToSection('classes-section')">
-        Занятия
-    </button>
-    <button mat-button data-section="contacts-section" (click)="scrollToSection('contacts-section')">
-        Контакты
-    </button>
-    <button mat-icon-button>Аккаунт</button>
+<div *ngIf="isMenuOpen" class="dropdown-background" (click)="closeMenu()">
+    <div class="menu-dropdown" (click)="$event.stopPropagation()">
+        <button mat-button mat-raised-button class="special">Записаться</button>
+        <button mat-button mat-raised-button data-section="home-section" (click)="scrollToSection('home-section')">
+            <div class="flex-row center-row button-content"><mat-icon>home</mat-icon>Главная</div>
+        </button>
+        <button mat-button mat-raised-button data-section="about-section" (click)="scrollToSection('about-section')">
+            <div class="flex-row center-row button-content"><mat-icon>functions</mat-icon>О ΣΙΓΜΑ</div>
+        </button>
+        <button mat-button mat-raised-button data-section="classes-section"
+            (click)="scrollToSection('classes-section')">
+            <div class="flex-row center-row button-content"><mat-icon>music_note</mat-icon>Занятия</div>
+        </button>
+        <button mat-button mat-raised-button data-section="contacts-section"
+            (click)="scrollToSection('contacts-section')">
+            <div class="flex-row center-row button-content"><mat-icon>mail</mat-icon>Контакты</div>
+        </button>
+        <!-- <button mat-icon-button><mat-icon>account_circle</mat-icon>Аккаунт</button> -->
+    </div>
 </div>
