--- a/src/styles/buttons/inp-button.scss
+++ b/src/styles/buttons/inp-button.scss
@@ -77,7 +77,16 @@
 .mat-mdc-raised-button {
     background-color: var(--brand-color);
     color: #ffff;
-    transition: transform 0.5s ease-in-out !important;
+    transition:
+        background-color 0.25s ease-in-out,
+        // justify-content 0.5s ease-in-out,
+        transform 0.5s ease-in-out !important;
+    // justify-content 0.5s ease-in-out;
+    // transition: justify-content 0.5s ease-in-out !important;
+
+    mat-icon {
+        transition: margin-left 0.25 ease-in-out;
+    }
 
     &:hover:not(.mat-button-disabled) {
         background-color: var(--shaded-brand-color) !important;
