--- a/src/app/components/social-media/social-media.component.html
+++ b/src/app/components/social-media/social-media.component.html
@@ -10,7 +10,7 @@
     </a>
 
     <!-- VK -->
-    <a target="_blank" href="https://t.me/osmium_tetroxide">
+    <a target="_blank" href="https://vk.com/id807000590">
         <!-- classic -->
         <!-- <img class="social__item" alt="VK" src="https://res.cloudinary.com/dxunxtt1u/image/upload/vk-128_p0fiqq.png"> -->
         <!-- brand color -->
@@ -19,7 +19,7 @@
     </a>
 
     <!-- Instagram -->
-    <a target="_blank" href="https://t.me/osmium_tetroxide">
+    <a target="_blank" href="https://www.instagram.com/osmium_tetroxide">
         <!-- classic -->
         <!-- <img class="social__item" alt="Instagram"
             src="https://res.cloudinary.com/dxunxtt1u/image/upload/instagram-182_c401mx.png"> -->
